--- a/style.css
+++ b/style.css
@@ -1,1 +1,18 @@
-style.css
+body {
+	background-color: black;
+	color: white;
+}
+
+img {
+	width: 200px;
+	display: block;
+	margin: 40px auto;
+}
+
+h1 {
+	text-align: center;
+}
+
+button {
+	background-color: white;
+}
